--- a/app/Tpl/main/fanwe/duobaost.html
+++ b/app/Tpl/main/fanwe/duobaost.html
@@ -100,5 +100,31 @@ $this->_var['cpagejs'][] = $this->_var['TMPL_REAL']."/dc/js/page_js/slider.js";
         </ul>
         </div>
     </div>
+<div class="lottery_list f_r">
+    <h1 class="lottery-title">中奖记录</h1>
+    <div class="txtScroll-top">
+        <div class="bd">
+            <div class="tempWrap">
+                <ul class="lottery_box infoList">
+                    {foreach from=$newest_lottery_list item=newest_lottery name="newest_lottery_foreach"}
+                    <li class="clearfix lottery_info {if $smarty.foreach.newest_lottery_foreach.index%2 eq 0}gray-bac{/if}" >
+                        <div class="user-pic f_l"><img src="{function name="get_user_avatar" uid=$newest_lottery.luck_user_id type="small"}" width="40" height="40"></div>
+                        <div class="f_l bonus-info">
+                            <div class="user-time clearfix">
+                                <a href="{url x="index" r="home" p="id=$newest_lottery.luck_user_id"}" class="user_name f_l" title="{$newest_lottery.user_name}(ID:{$newest_lottery.luck_user_id})">{$newest_lottery.user_name}</a><sapn class="duobao-time f_r">于{$newest_lottery.span_time}</sapn>
+                            </div>
+                            <p class="info">夺得<a href="{url r="index" r="duobao" p="id=$newest_lottery.id"}" class="bonus-goods">{$newest_lottery.name}</a></p>
+                            <div class="p-price">
+                                总需：{$newest_lottery.max_buy}人次
+                            </div>
+                        </div>
+                    </li>
+                    {/foreach}
+                </ul>
+            </div>
+        </div>
+    </div>
+    <h2>看看谁的手气最好！</h2>
+</div>
 </div>
 {include file="inc/footer.html"}
