中奖首页展示

--- a/app/Tpl/main/fanwe/uc/uc_invite.html
+++ b/app/Tpl/main/fanwe/uc/uc_invite.html
@@ -63,7 +63,7 @@ var MEDAL_BOX_URL = '{url x="index" r="uc_medal#load_medal"}';
 								
 								</div>
 					</div>
-					<div><img src="{function name="gen_qrcode" value=$share_url}" isload="true"></div>
+					<div> <img style="width: 399px;height: 100%;" src="{function name="gen_qrcodeq" value=$share_url size=6}" isload="true"></div>
 					<div class="blank20"></div>				
 					{if $list}
 					<table>
