--- a/admin/Tpl/default/Scratch/detailAdd.html
+++ b/admin/Tpl/default/Scratch/detailAdd.html
@@ -30,7 +30,7 @@
             <tr>
                 <td class="item_title">剩余数量:</td>
                 <td class="item_input">
-                    <input type="text" class="textbox require" name="last_num" value="{$scratch_prize['last_num']}"/>
+                    <input type="text" class="textbox" name="last_num" value="{$scratch_prize['last_num']}"/>
                 </td>
             </tr>
             </if>
