中奖首页展示

--- a/app/Tpl/main/fanwe/uc/uc_fx.html
+++ b/app/Tpl/main/fanwe/uc/uc_fx.html
@@ -59,7 +59,7 @@ var MEDAL_BOX_URL = '{url x="index" r="uc_medal#load_medal"}';
 				</ul>
 				<div class="fx-info">
 					<p>今日我的一级邀请用户交易：</p>
-					<p><span class="txt-red">{$data.today_first_order_money}</span>个云币，<span class="txt-red">{$data.fx_count.three_fx_count}</span>个订单数，按照{if $data.fx_salary_type==1 }{$data.fx_level_one_salary}%{else}固额{$data.fx_level_one_salary}{/if}的佣金，我收入<span class="txt-red">{$data.today_first_money}</span>个夺宝币</p>
+					<p><span class="txt-red">{$data.today_first_order_money}</span>个金币，<span class="txt-red">{$data.fx_count.three_fx_count}</span>个订单数，按照{if $data.fx_salary_type==1 }{$data.fx_level_one_salary}%{else}固额{$data.fx_level_one_salary}{/if}的佣金，我收入<span class="txt-red">{$data.today_first_money}</span>个金币</p>
 				</div>
 			</div>
 			<div class="my-fx-list">
@@ -85,7 +85,7 @@ var MEDAL_BOX_URL = '{url x="index" r="uc_medal#load_medal"}';
 				</ul>
 				<div class="fx-info">
 					<p>今日我的二级邀请用户交易：</p>
-					<p><span class="txt-red">{$data.today_second_order_money}</span>个云币，<span class="txt-red">{$data.fx_count.second_fx_count}</span>个订单数，按照{if $data.fx_salary_type==1 }{$data.fx_level_two_salary}%{else}固额{$data.fx_level_two_salary}{/if}的佣金，我收入<span class="txt-red">{$data.today_second_money}</span>个夺宝币</p>
+					<p><span class="txt-red">{$data.today_second_order_money}</span>个金币，<span class="txt-red">{$data.fx_count.second_fx_count}</span>个订单数，按照{if $data.fx_salary_type==1 }{$data.fx_level_two_salary}%{else}固额{$data.fx_level_two_salary}{/if}的佣金，我收入<span class="txt-red">{$data.today_second_money}</span>个金币</p>
 				</div>
 			</div>
 			<div class="my-fx-list">
@@ -113,7 +113,7 @@ var MEDAL_BOX_URL = '{url x="index" r="uc_medal#load_medal"}';
 				</ul>
 				<div class="fx-info">
 					<p>今日我的三级邀请用户交易：</p>
-					<p><span class="txt-red">{$data.today_three_order_money}</span>个云币，<span class="txt-red">{$data.fx_count.first_fx_count}</span>个订单数，按照{if $data.fx_salary_type==1 }{$data.fx_level_three_salary}%{else}固额{$data.fx_level_three_salary}{/if}的佣金，我收入<span class="txt-red">{$data.today_three_money}</span>个夺宝币</p>
+					<p><span class="txt-red">{$data.today_three_order_money}</span>个金币，<span class="txt-red">{$data.fx_count.first_fx_count}</span>个订单数，按照{if $data.fx_salary_type==1 }{$data.fx_level_three_salary}%{else}固额{$data.fx_level_three_salary}{/if}的佣金，我收入<span class="txt-red">{$data.today_three_money}</span>个金币</p>
 				</div>
 			</div>
 			<div class="fx-rule">
