订单填写地址

--- a/app/Tpl/main/fanwe/scratch.html
+++ b/app/Tpl/main/fanwe/scratch.html
@@ -92,7 +92,7 @@ $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/jquery.eraser.js";
     </div>
     <div class="g_3">
         <div class="g_3_tit"><span class="g_3_txt">游戏规则</span></div>
-        <div class="g_3_cet1">刮刮乐会消耗用户的金币，钻石或者优惠券，具体根据每个游戏设定不同。如果玩家中了虚拟货币如金币钻石等，会自动充值到到玩家账号；如果是实物商品就需要玩家填写收货地址。</div>
+        <div class="g_3_cet1">刮刮乐会消耗用户的金币，钻石或者优惠券，具体根据每个游戏设定不同。如果玩家中了虚拟货币如金币钻石等，会自动充值到到玩家账号, 用户可以去用户中心查看；如果是实物商品会自动生成订单，用户可以去购买中心查看。</div>
     </div>
 
 </div>
