--- a/wap/Tpl/main/scratch.html
+++ b/wap/Tpl/main/scratch.html
@@ -1,18 +1,15 @@
-{if $ajax_refresh==0}
 <?php
-
-
 //刮刮乐静态资源
-$this->_var['pagecss'][] = $this->_var['TMPL_REAL']."/css/scratch/normalize.css";
-$this->_var['pagecss'][] = $this->_var['TMPL_REAL']."/css/scratch/htmleaf-demo.css";
-$this->_var['pagecss'][] = $this->_var['TMPL_REAL']."/css/scratch/style.css";
 $this->_var['pagecss'][] = $this->_var['TMPL_REAL']."/css/weebox.css";
 $this->_var['pagecss'][] = $this->_var['TMPL_REAL']."/css/fanweUI.css";
 $this->_var['pagecss'][] = $this->_var['TMPL_REAL']."/css/style.css";
 $this->_var['pagecss'][] = $this->_var['TMPL_REAL']."/css/color.css";
+$this->_var['pagecss'][] = $this->_var['TMPL_REAL']."/css/article.css";
 $this->_var['pagecss'][] = $this->_var['TMPL_REAL']."/css/public.css";
-$this->_var['pagecss'][] = $this->_var['TMPL_REAL']."/css/duobaos.css";
-$this->_var['pagecss'][] = $this->_var['TMPL_REAL']."/css/pull_refresh.css";
+$this->_var['pagecss'][] = $this->_var['TMPL_REAL']."/css/scratch/normalize.css";
+$this->_var['pagecss'][] = $this->_var['TMPL_REAL']."/css/scratch/htmleaf-demo.css";
+$this->_var['pagecss'][] = $this->_var['TMPL_REAL']."/css/scratch/style.css";
+
 
 $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/utils/jquery-1.6.2.min.js";
 $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/utils/jquery.bgiframe.js";
@@ -28,176 +25,191 @@ $this->_var['cpagejs'][] = $this->_var['TMPL_REAL']."/js/fanwe_utils/fanweUI.js"
 $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/script.js";
 $this->_var['cpagejs'][] = $this->_var['TMPL_REAL']."/js/script.js";
 
-$this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/onload.js";
-$this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/swipe.js";
 
-$this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/duoobao_item_num.js";
-$this->_var['cpagejs'][] = $this->_var['TMPL_REAL']."/js/duoobao_item_num.js";
 
-$this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/pull_refresh/lib/touche.js";
-$this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/pull_refresh/pull-refresh.js";
-$this->_var['cpagejs'][] = $this->_var['TMPL_REAL']."/js/pull_refresh/pull-refresh.js";
+$this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/jquery.eraser.js";
 
 ?>
-
 {include file="inc/header_title_home.html"}
 
-<script type="text/javascript">
-    //减少移动端触发"Click"事件时300毫秒的时间差
-    window.addEventListener('load', function() {
-        FastClick.attach(document.body);
-    }, false);
+<div class="wrap_full_w clearfix" style="margin-top:20px">
 
-</script>
-
-{/if}
-<!--
-
-<div class="wrap  loading_container" id="loading_container">
-    <div class="content">
--->
-
-        <div class="wrap_full_w clearfix" style="margin-top:20px">
-
-            <div class="htmleaf-container">
-                <figure id="bridgeContainer" >
-                    <canvas id="bridge" width="750" height="465"></canvas>
-
-                </figure>
-
-            </div>
-            <div class="text1">呱呱中大奖</div>
-
-
-
-            <div class="col-md-4">
-                <div class="g_3">
-                    <div class="g_3_tit"><span class="g_3_txt">游戏介绍</span></div>
-                    <div class="g_3_cet1">视觉中国事件目前持续发酵中。起因于4月11日，视觉中国网站发布了人类历史上首张黑洞照片，版权所有一栏，写的是视觉中国。此事引发巨大争议。昨日下午，视觉中国将使用说明改为「不得用于商业用途」，并把版权所有改为「欧洲南方天文台」。百度、凤凰网等公司官方微博发文称，自己的商标被视觉中国收录并打上水印。共青团中央微博发文称，国旗、国徽的图片也在视觉中国网站上售卖。视觉中国道歉</div>
-                </div>
-                <div class="g_3">
-                    <div class="g_3_tit"><span class="g_3_txt">游戏规则</span></div>
-                    <div class="g_3_cet1">视觉中国事件目前持续发酵中。起因于4月11日，视觉中国网站发布了人类历史上首张黑洞照片，版权所有一栏，写的是视觉中国。此事引发巨大争议。昨日下午，视觉中国将使用说明改为「不得用于商业用途」，并把版权所有改为「欧洲南方天文台」。百度、凤凰网等公司官方微博发文称，自己的商标被视觉中国收录并打上水印。共青团中央微博发文称，国旗、国徽的图片也在视觉中国网站上售卖。视觉中国道歉</div>
-                </div>
-                <div class="g_3">
-                    <div class="g_3_tit"><span class="g_3_txt">奖励设置</span></div>
-                    <div class="g_3_cet">
-                        <table>
-                            <tr>
-                                <td width="30%">奖级</td>
-                                <td width="70%">中奖金额</td>
-                            </tr>
-                            <tr>
-                                <td>1</td>
-                                <td>250,000元</td>
-                            </tr>
-                            <tr>
-                                <td>2</td>
-                                <td>10,000元</td>
-                            </tr>
-                            <tr>
-                                <td>3</td>
-                                <td>1,000元</td>
-                            </tr>
-                            <tr>
-                                <td>4</td>
-                                <td>500元</td>
-                            </tr>
-                            <tr>
-                                <td>5</td>
-                                <td>200元</td>
-                            </tr>
-                            <tr>
-                                <td>6</td>
-                                <td>100元</td>
-                            </tr>
-                            <tr>
-                                <td>7</td>
-                                <td>50元</td>
-                            </tr>
-                            <tr>
-                                <td>8</td>
-                                <td>20元</td>
-                            </tr>
-                            <tr>
-                                <td>9</td>
-                                <td>10元</td>
-                            </tr>
-                        </table>
-                    </div>
-                </div>
-            </div>
-            <script type="text/javascript">
-                var bridge = document.getElementById("bridge"),
-                    bridgeCanvas = bridge.getContext('2d'),
-                    brushRadius = (bridge.width / 100) * 5,
-                    img = new Image();
-                if (brushRadius < 50) { brushRadius = 50 }
-                img.onload = function(){
-                    bridgeCanvas.drawImage(img, 0, 0, bridge.width, bridge.height);
-                }
-                //静态资源位置
-                img.loc = '{$TMPL}/images/scratch/img/';
-                img.filename = 'scratch-1.jpg';
-                if (window.devicePixelRatio >= 2) {
-                    var nameParts = img.filename.split('.');
-                    img.src = img.loc + nameParts[0]+"-2x"+"."+nameParts[1];
-                } else {
-                    img.src = img.loc + img.filename;
-                }
-                function detectLeftButton(event) {
-                    if ('buttons' in event) {
-                        return event.buttons === 1;
-                    } else if ('which' in event) {
-                        return event.which === 1;
-                    } else {
-                        return event.button === 1;
-                    }
-                }
-                function getBrushPos(xRef, yRef) {
-                    var bridgeRect = bridge.getBoundingClientRect();
-                    return {
-                        x: Math.floor((xRef-bridgeRect.left)/(bridgeRect.right-bridgeRect.left)*bridge.width),
-                        y: Math.floor((yRef-bridgeRect.top)/(bridgeRect.bottom-bridgeRect.top)*bridge.height)
-                    };
-                }
-                function drawDot(mouseX,mouseY){
-                    bridgeCanvas.beginPath();
-                    bridgeCanvas.arc(mouseX, mouseY, brushRadius, 0, 2*Math.PI, true);
-                    bridgeCanvas.fillStyle = '#000';
-                    bridgeCanvas.globalCompositeOperation = "destination-out";
-                    bridgeCanvas.fill();
-                }
-                bridge.addEventListener("mousemove", function(e) {
-                    var brushPos = getBrushPos(e.clientX, e.clientY);
-                    var leftBut = detectLeftButton(e);
-                    if (leftBut == 1) {
-                        drawDot(brushPos.x, brushPos.y);
-                    }
-                }, false);
-                bridge.addEventListener("touchmove", function(e) {
-                    e.preventDefault();
-                    var touch = e.targetTouches[0];
-                    if (touch) {
-                        var brushPos = getBrushPos(touch.pageX, touch.pageY);
-                        drawDot(brushPos.x, brushPos.y);
-                    }
-                }, false);
-            </script>
+<div class="htmleaf-container">
+    <figure id="bridgeContainer" >
+        <!--<canvas id="bridge" width="750" height="465"></canvas>-->
+        <div class="redux_c" style="margin: 0 auto;background-size: cover;width: 100%;">
+            <div id="mask_img_bg"><span class="cont-span"></span></div>
+            <img id="redux" src="{$TMPL}/images/scratch/img/layer.png"/>
         </div>
+    </figure>
 
-        <!-- 无数据↓ -->
-     <!--   <div class="null_data">
-            <p class="icon"><i class="iconfont">&#xe6e8;</i></p>
-            <p class="message">暂无数据</p>
-        </div>-->
 
-<!--
-    </div>
 </div>
--->
+<div class="text1" style="height:66px">刮刮中大奖</div>
 
-{if $ajax_refresh==0}
+<div class="col-md-4">
+
+    <div class="g_3">
+        <div class="g_3_tit"><span class="g_3_txt">奖励设置</span>
+            <input type="hidden" name="scratch_tip" value="{$scratch_tip}">
+            <input type="hidden" name="scratch_id" value="{$scratch_id}">
+        </div>
+        <div class="g_3_cet">
+            <table>
+
+                <tr>
+                    <td width="35%">奖级</td>
+                    <td width="65s%">奖品</td>
+                </tr>
+                {if $prizes}
+                {foreach from=$prizes item=prize key=key}
+                <tr>
+                    <td style="font-size:14px">{$key}</td>
+                    <td style="font-size:13px">
+                        {foreach from=$prize item=v}
+                          <p>{$v}</p>
+                        {/foreach}
+                    </td>
+                </tr>
+                {/foreach}
+                {else}
+                <tr>
+                    <td colspan="2" align="center">暂无奖项设置</td>
+                </tr>
+                {/if}
+            </table>
+        </div>
+    </div>
+
+    <div class="g_3">
+        <div class="g_3_tit"><span class="g_3_txt">游戏介绍</span></div>
+        <div class="g_3_cet1">刮开页面“请开始刮奖”区域，凡出现××等奖字样即为中奖。</div>
+    </div>
+    <div class="g_3">
+        <div class="g_3_tit"><span class="g_3_txt">游戏规则</span></div>
+        <div class="g_3_cet1">刮刮乐会消耗用户的金币，钻石或者优惠券，具体根据每个游戏设定不同。如果玩家中了虚拟货币如金币钻石等，会自动充值到到玩家账号, 用户可以去用户中心查看；如果是实物商品会自动生成订单，用户可以去购买中心查看。</div>
+    </div>
+
+</div>
+<script type="text/javascript">
+
+    $(document).ready(function(){
+        var num = 1;
+        var get_result = APP_ROOT + "/wap/index.php?ctl=scratch&act=get_result",
+            user_login = APP_ROOT + "/wap/index.php?ctl=user&act=login",
+            user_center = APP_ROOT + "/wap/index.php?ctl=uc_center";
+        var scratch_id = $('input[name="scratch_id"]').val();
+        var scratch_tip = $('input[name="scratch_tip"]').val();
+
+        $('#redux').mousedown(function(){
+
+            if(num==1){
+                if(!scratch_id){
+                    $.showErr('参数错误');
+                    return false;
+                }
+                $.showConfirm('消耗'+scratch_tip+'，是否继续？',function(){
+
+                    num++;
+                    $.get(get_result,{scratch_id:scratch_id},function(xhr){
+
+                        if(xhr.code!=200){
+                            num=1;
+                            if(xhr.code==401){
+                                $.showErr(xhr.msg);
+                                window.location.href=user_login;
+                            }else if(xhr.code==402){
+                                /*$.showErr(xhr.msg,function(){
+                                    window.location.href= user_center;
+                                });*/
+                                $.showErr(xhr.msg);
+                            }else{
+                                $.showErr(xhr.msg);
+                            }
+                            return false;
+                        }
+
+
+                        $('#redux').eraser({
+                            size: 50,   //设置橡皮擦大小
+                            completeRatio: .5, //设置擦除面积比例
+                        });
+
+                        $("#mask_img_bg>span").text(xhr.data.prize);
+                    },'json');
+
+
+                });
+
+            }
+
+        });
+
+
+
+    });
+
+
+
+
+    /*var bridge = document.getElementById("bridge"),
+        bridgeCanvas = bridge.getContext('2d'),
+        brushRadius = (bridge.width / 100) * 5,
+        img = new Image();
+    if (brushRadius < 50) { brushRadius = 50 }
+    img.onload = function(){
+        bridgeCanvas.drawImage(img, 0, 0, bridge.width, bridge.height);
+    }
+    //静态资源位置
+    /!*img.loc = '{$TMPL}/images/scratch/img/';
+    img.filename = 'scratch-1.jpg';
+    if (window.devicePixelRatio >= 2) {
+        var nameParts = img.filename.split('.');
+        img.src = img.loc + nameParts[0]+"-2x"+"."+nameParts[1];
+    } else {
+        img.src = img.loc + img.filename;
+    }*!/
+    function detectLeftButton(event) {
+        if ('buttons' in event) {
+            return event.buttons === 1;
+        } else if ('which' in event) {
+            return event.which === 1;
+        } else {
+            return event.button === 1;
+        }
+    }
+    function getBrushPos(xRef, yRef) {
+        var bridgeRect = bridge.getBoundingClientRect();
+        return {
+            x: Math.floor((xRef-bridgeRect.left)/(bridgeRect.right-bridgeRect.left)*bridge.width),
+            y: Math.floor((yRef-bridgeRect.top)/(bridgeRect.bottom-bridgeRect.top)*bridge.height)
+        };
+    }
+    function drawDot(mouseX,mouseY){
+        bridgeCanvas.beginPath();
+        bridgeCanvas.arc(mouseX, mouseY, brushRadius, 0, 2*Math.PI, true);
+        bridgeCanvas.fillStyle = '#000';
+        bridgeCanvas.globalCompositeOperation = "destination-out";
+        bridgeCanvas.fill();
+    }
+    bridge.addEventListener("mousemove", function(e) {
+        var brushPos = getBrushPos(e.clientX, e.clientY);
+        var leftBut = detectLeftButton(e);
+        if (leftBut == 1) {
+            drawDot(brushPos.x, brushPos.y);
+        }
+    }, false);
+    bridge.addEventListener("touchmove", function(e) {
+        e.preventDefault();
+        var touch = e.targetTouches[0];
+        if (touch) {
+            var brushPos = getBrushPos(touch.pageX, touch.pageY);
+            drawDot(brushPos.x, brushPos.y);
+        }
+    }, false);*/
+</script>
+</div>
+
+
 {include file="inc/footer_menu.html"}
-{include file="inc/add_to_list.html"}
-{/if}
+{include file="inc/footer_index.html"}
